--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,14 @@
     align-items: center;
     padding: 0;
     list-style: none;
+    background: rgba(255, 255, 255, 0.23);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.3px);
+    -webkit-backdrop-filter: blur(4.3px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    height: 80vh;
+    width: 70px;
 }
 
 .left.half li {
@@ -34,9 +42,14 @@
 .left.half a {
     width: 30px;
     height: 30px;
-    background-color: rgb(207, 207, 207);
     border-radius: 10px;
     padding: 10px;
     display: block;    
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.9px);
+    -webkit-backdrop-filter: blur(2.9px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
