--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
-  background-image: url('../img/peakpx.jpg');
+  background: rgb(34,193,195);
+  background: linear-gradient(218deg, rgba(34,193,195,1) 0%, rgba(255,158,78,1) 100%);
 }
 
 .half {
