--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,12 @@
 }
 
 .left.half ul li a:hover {
-    color: #007bff;
+    color: #f88c33;
+}
+
+.left.half ul li:hover {
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
 }
   
 
