--- a/src/sections/static/Home.css
+++ b/src/sections/static/Home.css
@@ -27,6 +27,10 @@
 
 .overview {
     flex: 0.6;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2em;
     background: rgba(255, 255, 255, 0);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -34,6 +38,38 @@
     -webkit-backdrop-filter: blur(0px);
     width: 100%;
 }
+
+.overviewLeft {
+    flex: 0.5;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.overviewRight {
+    flex: 0.5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.totalTasks, .tasksCompleted  {
+    flex: 0.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+    width: 250px;
+    height: 100px;
+    margin: 2em;
+}
+
+
 
 .dueToday {
     flex: 0.4;
